<resources>
    <string name="app_name">auth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="email_all_caps">EMAIL</string>
    <string name="password_all_caps">PASSWORD</string>
    <string name="email_sent_success_message">We\'ve Sent You A Reset Password Link On Your Registered Email Address</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
</resources>
